Update ROS integration with GUI and nodes

--- a/references.bib
+++ b/references.bib
@@ -794,3 +794,17 @@ Theory and practice-a survey},
     year={2021},
     note={\url{http://wiki.ros.org/roslaunch}}
 }
+
+@misc{cite_figma, 
+    title={Figma: the collaborative interface design tool},
+    author="{Figma Community}",
+    year={2021},
+    note={\url{https://www.figma.com}}
+}
+
+@misc{cite_Tkinter-Designer, 
+    title="{ParthJadhav/Tkinter-Designer: Create Beautiful Tkinter GUIs by Drag and Drop.}",
+    author="{ParthJadhav}",
+    year={2021},
+    note={\url{https://github.com/ParthJadhav/Tkinter-Designer}}
+}
