Update the introduction with more data about Parkinson's and the war conflict

--- a/references.bib
+++ b/references.bib
@@ -808,3 +808,36 @@ Theory and practice-a survey},
     year={2021},
     note={\url{https://github.com/ParthJadhav/Tkinter-Designer}}
 }
+
+@article{cite_parkinson_total_people_colombia,
+    author = {Sandra Bibiana Avendaño-Avendaño and Oscar Bernal-Pacheco and Carmen Teresa Esquivia-Pájaro},
+    year = {2019},
+    volume={29},
+    number={2},
+    pages={93-102},
+    title = {Caracterización funcional y calidad de vida en pacientes con enfermedad de Parkinson},
+    doi = {https://doi.org/10.28957/rcmfr.v29n2a3},
+    note = {\url{https://revistacmfr.org/index.php/rcmfr/article/view/209}}
+}
+
+@misc{cite_colombia_war_victims, 
+    title="{Militares ¿víctimas del conflicto armado?}",
+    author={Vivian Zamora},
+    year={2017},
+    note={\url{https://www.urosario.edu.co/Revista-Nova-Et-Vetera/Vol-3-Ed-27/Omnia/Militares-victimas-del-conflicto-armado/}}
+}
+
+@misc{cite_colombia_war_conflict_explained, 
+    title="{Colombia Events of 2019}",
+    author="{Human Rights Watch}",
+    year={2020},
+    note={\url{https://www.hrw.org/world-report/2020/country-chapters/colombia#}}
+}
+
+@misc{cite_people_affected_from_minefields_colombia, 
+    title="{Campesino sobrevivió a un campo minado en Ituango}",
+    author={Nelson Matta Colorado},
+    year={2021},
+    note={\url{https://www.elcolombiano.com/antioquia/seguridad/mina-antipersona-dejo-un-campesino-herido-en-ituango-LE15559507}}
+}
+
