--- a/tesis_article.tex
+++ b/tesis_article.tex
@@ -269,9 +269,11 @@ At the end of the article, we will expose the most important ethical and real li
 
 According to the Technical Guide of the Food and Nutrition Component for the Population with Disabilities of the Colombian Institute of Family Welfare (ICBF), this group of individuals are more likely to have nutritional problems \citep{cite_ICBF_technical_article}. Likewise, individuals with upper limb disabilities, have a significant reduction in activities of daily living (especially feeding) and may become impaired in their psychological state \citep{cite_upper_limb_disabilities_self_steem}.\\
 
-It is estimated that there are more than 10 million people with Parkinson's worldwide, of which a significant percentage have critical mobility problems in their upper extremities \citep{cite_parkinson_foundation_total_cases}. The incidence of people with Parkinson's disability increases with the age of the individuals, but there is approximately 4\% of them that are diagnosed before the age of 50 years. According to studies conducted by the Parkinson Foundation (PF), men are more likely than women to have this disease. Another factor that is of relevance to this problem is that there is currently a higher prevalence of pain and disabilities in upper limbs in young university populations, which implies an increase in the group of people who will have joint disabilities in the future and will be more likely to present malnutrition problems due to the difficulties of performing the task of feeding by their own hands \citep{cite_park_active_robot_assisted_feeding}.\\
+It is estimated that there are more than 10 million people with Parkinson's worldwide, of which a significant percentage have critical mobility problems in their upper extremities \citep{cite_parkinson_foundation_total_cases}. In Colombia, it is estimated that from a group of 1000 individuals older than 50 years old, there are about 4.7 ones with Parkinson's disease \citep{cite_parkinson_total_people_colombia}.The incidence of people with Parkinson's disability increases with the age of the individuals, but there is approximately 4\% of them that are diagnosed before the age of 50 years. According to studies conducted by the Parkinson Foundation (PF), men are more likely than women to have this disease. Another factor that is of relevance to this problem is that there is currently a higher prevalence of pain and disabilities in upper limbs in young university populations, which implies an increase in the group of people who will have joint disabilities in the future and will be more likely to present malnutrition problems due to the difficulties of performing the task of feeding by their own hands \citep{cite_park_active_robot_assisted_feeding}.\\
 
-This is why it is necessary to look for technological solutions that allow this group of individuals to receive support and assistance in daily tasks, especially feeding. Considering this context, a branch of robotics known as \say{Assisted Robotics} is of interest, where robotic systems seek to support individuals with disabilities to perform daily tasks \citep{cite_assited_robotics_stanford_lecture_jaffe}.\\
+Another crucial group of people that have been sadly affected in their upper extremities are the ones involved in Colombia's historical war conflict \citep{cite_colombia_war_conflict_explained}. The total number of victims is immeasurable but it can be calculated that there are more than 8 million victims from violence in Colombia \citep{cite_colombia_war_victims}. In 2021, the Red Cross registered more than 263 cases of victims of explosive weapons installed by illegal armed groups during the conflict in Colombia \citep{cite_people_affected_from_minefields_colombia}. This violence conflict is part of Colombian's history and, even if the number of victims per year decreases, there are still multiple cases in which innocent people are left without upper-extremities due to minefields created during the active war conflict.\\
+
+This is why it is necessary to look for technological solutions that allow this group of individuals (people with upper-limb disabilities, with Parkinson's disease, and individuals without the upper extremities) to receive support and assistance in daily tasks, especially feeding. Considering this context, a branch of robotics known as \say{Assisted Robotics} is of interest, where robotic systems seek to support individuals with disabilities to perform daily tasks \citep{cite_assited_robotics_stanford_lecture_jaffe}.\\
 
 Advances in assisted robotics have led to the development of various systems that seek to assist people with disabilities in the task of feeding (scooping). There are commercial robotic platforms, which seek to fulfill the need to feed patients with upper limb motor disabilities, but these have several limitations that restrict and limit their ideal performance. The best known commercial robotic systems for these tasks, such as Myspoon, Bestic Arm, Meal Buddy, Mealtime and Obi, are passive. This means that they can not adapt to the dynamic conditions of the user's mouth position, nor the ability to detect anomalies in the feeding process \citep{cite_park_active_robot_assisted_feeding}.\\
 
@@ -1338,6 +1340,8 @@ A detailed explanation of how to setup Baxter Bon Appetit project with the sourc
 \end{itemize}
 
 Another valuable appreciation is that the initial experiments of this research project, will be tested on the authors (Santiago Garcia Arango and Elkin Javier Guerra Galeano), but for future improvements, there will be a greater development of quality assurance tests in multiple patients. This will be discussed in the \say{Ethical Considerations} in the final chapters.\\
+
+Additionally, it's of major relevance to understand that this project is oriented for people with motor disabilities in upper-limbs. However, each individual could have different degrees of mobility impairments both in their body and their head. Thus, \say{Baxter Bon Appetit} project will be aimed towards individuals that are capable of tilting their head towards the feeding cutlery and don't have extreme disability conditions.\\
 
 
 % ---------------------------------------------------------
